--- a/src/face_ver/WORKSPACE
+++ b/src/face_ver/WORKSPACE
@@ -8,7 +8,7 @@ local_repository(
   path = __workspace_dir__ + "/../serving",
 )
 
-load('@tf//tensorflow/tensoflow:workspace.bzl','tf_workspace')
+load('@tf//tensoflow:workspace.bzl','tf_workspace')
 
 tf_workspace("tensorflow/")
 
