--- a/src/face_ver/WORKSPACE
+++ b/src/face_ver/WORKSPACE
@@ -9,7 +9,7 @@ local_repository(
 )
 
 load("@serving//tensorflow/tensorflow:workspace.bzl", 'tf_workspace')
-tf_workspace("tensorflow/")
+tf_workspace("../serving/tensorflow/")
 
 bind(
     name = "libssl",
