change protobuf actual according to tf_workspace

--- a/src/face_ver/WORKSPACE
+++ b/src/face_ver/WORKSPACE
@@ -25,7 +25,7 @@ git_repository(
 
 bind(
     name = "protobuf_clib",
-    actual = "@tf//google/protobuf:protobuf",
+    actual = "@serving//tensorflow/google/protobuf:protobuf",
 )
 
 bind(
