--- a/src/face_ver/BUILD
+++ b/src/face_ver/BUILD
@@ -25,6 +25,21 @@ filegroup(
     ),
 )
 
+cc_library(
+    name = "grpc_cc",
+    srcs = [
+        "inference.grpc.pb.cc",
+        "inference.pb.cc",
+    ],
+    hdrs = [
+        "inference.grpc.pb.h",
+        "inference.pb.h",
+    ],
+    deps = [
+        "//grpc:grpc++",
+    ],
+)
+
 py_library(
     name = "input_data",
     srcs = ["input_data.py"],
@@ -35,15 +50,23 @@ py_library(
     srcs = ["cifar10.py"],
 )
 
-py_binary(
-    name = "mnist_export",
+cc_binary(
+    name = "inference",
     srcs = [
-        "mnist_export.py",
+        "inference.cc",
     ],
+    linkopts = ["-lm"],
     deps = [
-        "@tf//tensorflow:tensorflow_py",
-        ":mnist_input_data",
-        "@serving//tensorflow_serving/session_bundle:exporter",
+        "@tf//tensorflow/core:core_cpu",
+        "@tf//tensorflow/core:framework",
+        "@tf//tensorflow/core:lib",
+        "@tf//tensorflow/core:protos_all_cc",
+        "@tf//tensorflow/core:tensorflow",
+        ":grpc_cc",
+        "//grpc",
+        "//tensorflow_serving/session_bundle",
+        "//tensorflow_serving/session_bundle:manifest_proto",
+        "//tensorflow_serving/session_bundle:signature",
     ],
 )
 
@@ -57,5 +80,18 @@ py_binary(
         ":input_data",
         ":cifar10",
         "@serving//tensorflow_serving/session_bundle:exporter",
+    ],
+)
+
+
+py_binary(
+    name = "client",
+    srcs = [
+        "client.py",
+        "inference_pb2.py",
+    ],
+    deps = [
+        "@tf//tensorflow:tensorflow_py",
+        ":input_data",
     ],
 )
